# Rusty-Template

./: .gitignore  README.md  Vagrantfile
Backend/: .env  .env_ci  .gitignore  Cargo.toml
Backend/.cargo/: config
Backend/src/: account.rs  mail.rs  main.rs  mysqlconnection.rs  util.rs  word.rs
Backend/src/account/: api.rs  mod.rs
Backend/src/account/domain_value/: create_member.rs  create_token.rs  credentials.rs  delete_token.rs  mod.rs  post_create_member.rs  post_delete_token.rs  post_login.rs  post_token.rs  update_content.rs  update_content_credentials.rs  validation_pair.rs
Backend/src/account/domainvalue/: account_information.rs  mod.rs  post_create_member.rs  post_delete_token.rs  post_login.rs  post_token.rs  validation_pair.rs
Backend/src/account/dto/: create.rs  create_member.rs  create_token.rs  delete.rs  failure.rs  forgot.rs  get.rs  login.rs  mod.rs  prolong_token.rs  restricted_content.rs  update.rs  update_content.rs
Backend/src/account/guard/: authenticate.rs
Backend/src/account/language/: english.rs  init.rs
Backend/src/account/material/: account.rs  account_data.rs  api_token.rs  member.rs  mod.rs  post_change_str.rs  post_change_str_login.rs
Backend/src/account/service/: api.rs  create.rs  delete.rs  forgot.rs  get.rs  login.rs  mod.rs  token.rs  update.rs
Backend/src/account/tests/: create.rs  delete.rs  forgot.rs  get.rs  login.rs  mod.rs  token.rs  update.rs  (+1 more)
Backend/src/database/: mod.rs
Backend/src/dto/: cachable.rs
Backend/src/language/: mod.rs
Backend/src/util/: mail.rs  mod.rs  random.rs  sha3.rs  strformat.rs  validator.rs
Backend/sub_crates/expose_api/: Cargo.toml
Backend/sub_crates/language/: Cargo.toml
Backend/sub_crates/str_util/: Cargo.toml
(+526 files in other folders)
