[package]
name = "backend"
version = "0.1.1"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
schemars = "*"
okapi = "*"
rocket_okapi = "*"
rocket_okapi_codegen = "*"
mysql = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha3 = "*"
rand = "*"
rand_distr = "*"
lettre = "*"
lettre_email = "*"
regex = "*"
lazy_static = "*"
dotenv = "*"
pwned = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
