[package]
name = "backend"
version = "0.1.1"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
schemars = "*"
mysql = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
dotenv = "*"
mail = { path = "sub_crates/mail" }
validator = { path = "sub_crates/validator" }
str_util = { path = "sub_crates/str_util" }
language = { path = "sub_crates/language" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
