[package]
name = "backend"
version = "0.1.1"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
schemars = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
mail = { path = "sub_crates/mail" }
validator = { path = "sub_crates/validator" }
str_util = { path = "sub_crates/str_util" }
language = { path = "sub_crates/language" }
expose_api = { path = "sub_crates/expose_api" }
time_util = { path = "sub_crates/time_util" }
mysql_connection = { path = "sub_crates/mysql_connection" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
